--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,364 @@
-<div style="text-align:center">
-  <h1 *ngIf="title === 'netflix'">Welcome to {{ title }}</h1>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <button class="navbar-toggler d-lg-none" type="button">
+    <img src="assets/images/hamburger.gif" alt="Menu" />
+  </button>
+
+  <a class="navbar-brand flex-grow-1" href="#">
+    <img src="assets/images/logo.png" class="my-1 mx-2" alt="Netflix" />
+  </a>
+
+  <ul class="nav text-white d-none d-lg-flex">
+    <li class="nav-item d-xl-none">
+      <a class="nav-link active text-reset" href="#">Navegar</a>
+    </li>
+    <li class="nav-item d-xl-none">
+      <a class="nav-link text-reset" href="#">Infantil</a>
+    </li>
+    <li class="nav-item d-none d-xl-flex">
+      <a class="nav-link active text-reset" href="#">Inicío</a>
+    </li>
+    <li class="nav-item d-none d-xl-flex">
+      <a class="nav-link text-reset" href="#">Séries</a>
+    </li>
+    <li class="nav-item d-none d-xl-flex">
+      <a class="nav-link text-reset" href="#">Filmes</a>
+    </li>
+    <li class="nav-item d-none d-xl-flex">
+      <a class="nav-link text-reset" href="#">Adicionados recentemente</a>
+    </li>
+    <li class="nav-item d-none d-xl-flex">
+      <a class="nav-link text-reset" href="#">Minha lista</a>
+    </li>
+  </ul>
+
+  <form class="form-inline">
+    <input class="form-control" type="search" placeholder="Busca" />
+  </form>
+
+  <div class="media text-white p-2 d-none d-lg-flex">
+    <img src="assets/images/avatar.jpg" alt="Avatar" class="mr-2" />
+    <div class="media-body">
+      <p class="h6 m-0 text-uppercase">Djalma Sindeaux</p>
+    </div>
+  </div>
+
+  <ul class="list-unstyled font-weight-bold sidebar">
+    <li class="media media-avatar">
+      <img src="assets/images/avatar.jpg" alt="Avatar" class="mr-2" />
+      <div class="media-body">
+        <p class="h6 m-0">DJALMA SINDEAUX</p>
+        <small>Trocar de perfil</small>
+      </div>
+    </li>
+    <li class="divider"></li>
+    <li><a href="#" class="text-reset">Inicio</a></li>
+    <li><a href="#" class="text-reset">Minha lista</a></li>
+    <li><a href="#" class="text-reset">Séries de ação e aventura</a></li>
+    <li><a href="#" class="text-reset">Ação e aventura</a></li>
+    <li><a href="#" class="text-reset">Séries teen</a></li>
+    <li><a href="#" class="text-reset">Filmes africanos</a></li>
+    <li><a href="#" class="text-reset">Séries da América Latina</a></li>
+    <li><a href="#" class="text-reset">Filmes de Anime</a></li>
+  </ul>
+</nav>
+
+<div class="content-fluid">
+  <div class="row no-gutters">
+    <div class="col-12 full-banner text-white">
+      <div class="p-4 d-flex justify-content-start h-100">
+        <div>
+          <h1 class="h3">Vingadores: Ultimato</h1>
+          <small class="d-flex my-2">
+            <span class="mr-3">2019</span>
+            <span class="mr-3">12</span>
+            <span>182min</span>
+          </small>
+          <p class="d-none d-lg-block">
+            Após Thanos eliminar metade das criaturas vivas, os Vingadores têm
+            de lidar com a perda de amigos e entes queridos. Com Tony Stark
+            vagando perdido no espaço sem água e comida, Steve Rogers e Natasha
+            Romanov lideram a resistência contra o titã louco.
+          </p>
+          <a href="#" class="btn btn-primary text-uppercase font-weight-bold"
+            >Assistir</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-3 list-titles">
+    <h2 class="h4">Adicionados recentemente</h2>
+
+    <div class="d-flex flex-nowrap overflow-hidden">
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-3 list-titles">
+    <h2 class="h4">Em alta</h2>
+
+    <div class="d-flex flex-nowrap overflow-hidden">
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-3 list-titles">
+    <h2 class="h4">
+      Continuar assistindo como
+      <span class="tex-uppercase">Djalma Sindeaux</span>
+    </h2>
+
+    <div class="d-flex flex-nowrap overflow-hidden">
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="title-item">
+        <video
+          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
+          controls
+          muted="muted"
+        ></video>
+        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
+        <div class="items">
+          <div class="left-side">
+            <button type="button" class="btn-play">
+              <i class="material-icons">play_arrow</i>
+            </button>
+            <h2>Guardiões da Galaxia</h2>
+            <ul class="infos">
+              <li class="relevance">98% relevante</li>
+              <li class="age age-12"></li>
+              <li class="parts">2 partes</li>
+            </ul>
+            <ul class="categories">
+              <li>Épico</li>
+              <li>Filme de fantasia</li>
+              <li>Viagem no espaço</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<h2>Here are some cars:</h2>
-<a>*ngFor="let car of cars"</a>
-<ul>
-  <li *ngFor="let car of cars">
-    {{ car }}
-  </li>
-</ul>
+
+<footer class="row no-gutters p-4">
+  <a class="col-12 col-sm-6 col-lg-3 text-reset" href="#">Termos de uso</a>
+  <a class="col-12 col-sm-6 col-lg-3 text-reset" href="#"
+    >Declaração de privacidade</a
+  >
+  <a class="col-12 col-sm-6 col-lg-3 text-reset" href="#"
+    >Preferências de cookies</a
+  >
+  <a class="col-12 col-sm-6 col-lg-3 text-reset" href="#">Centro de ajuda</a>
+</footer>
