--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,268 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #1b1b1b !important;
+  padding-top: 60px;
+}
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 60px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+}
+.navbar {
+  z-index: 1000;
+}
+.navbar.bg-dark {
+  background-color: rgba(0, 0, 0, 0.6) !important;
+}
+.navbar .form-control {
+  background-color: #1b1b1b !important;
+  color: #fff;
+  border-color: #fff;
+  border-radius: 0;
+  max-width: 115px;
+  line-height: 28px;
+  height: 28px;
+}
+.navbar img {
+  height: 24px;
+}
+.navbar ul.sidebar {
+  color: #999898;
+  max-width: 250px;
+  background-color: #1b1b1b !important;
+  position: absolute;
+  top: 60px;
+  left: -250px;
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+  transition: all 0.1s ease-out;
+  opacity: 0.5;
+}
+.navbar.sidebar-open ul {
+  left: 0;
+  opacity: 1;
+}
+.navbar ul li {
+  padding: 0.3em 1em;
+}
+.navbar ul li.divider {
+  border-bottom: #999898 1px solid;
+  margin: 0.3em auto;
+}
+.navbar-dark .navbar-toggler {
+  color: #fff;
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+.media-avatar img {
+  height: 38px;
+}
+.full-banner {
+  background-image: url("assets/images/full-banner.jpg");
+  min-height: 120px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.full-banner small {
+  color: #999898;
+}
+.full-banner .btn-primary {
+  background-color: #e30f19;
+  border-radius: 0;
+  border: none;
+  min-width: 100px;
+}
+.list-titles img {
+  min-width: 160px;
+}
+h2 {
+  color: #e5e5e5;
+}
+footer {
+  color: #999898;
+}
+.title-item {
+  position: relative;
+  margin-right: 10px;
+}
+.title-item img {
+  width: 100%;
+}
+.title-item video {
+  width: 100%;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.title-item:hover .items {
+  opacity: 1;
+}
+.title-item:hover img {
+  opacity: 0;
+}
+.title-item:hover video {
+  display: block;
+}
+.title-item .items {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #fff;
+  height: 100%;
+  padding: 10px;
+  background: -prefix-linear-gradient(
+    top,
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0.7)
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0.7)
+  );
+  display: flex;
+  align-items: flex-end;
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  opacity: 0;
+}
+.title-item h2 {
+  color: #fff;
+  font-size: 20px;
+  margin: 5px auto;
+}
+.title-item .btn-play {
+  background: none;
+  border: #fff 2px solid;
+  border-radius: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+}
+.title-item .btn-play i {
+  color: red;
+}
+.title-item ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.title-item ul li {
+  margin-right: 10px;
+}
+.relevance {
+  color: #3fad56;
+  font-weight: bold;
+}
+.age {
+  padding: 2px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  font-size: 12px;
+  height: 24px;
+  border-radius: 2px;
+  color: #fff;
+}
+.age-free {
+  background-color: rgb(0, 156, 76);
+}
+.age-free:before {
+  content: "L";
+}
+.age-12 {
+  background-color: #cda521;
+  color: #000;
+}
+.age-12:before {
+  content: "12";
+}
+.age-14 {
+  background-color: rgb(231, 121, 43);
+}
+.age-14:before {
+  content: "14";
+}
+.age-16 {
+  background-color: rgb(215, 38, 45);
+}
+.age-16:before {
+  content: "16";
+}
+.age-18 {
+  background-color: rgb(19, 17, 17);
+}
+.age-18:before {
+  content: "18";
+}
+.parts {
+  font-weight: bold;
+}
+@media (min-width: 576px) {
+  .full-banner {
+    min-height: 256px;
+  }
+  .navbar .form-control {
+    max-width: 180px;
+  }
+}
+@media (min-width: 768px) {
+  .full-banner .d-flex {
+    align-items: center;
+  }
+}
+@media (min-width: 992px) {
+  body {
+    padding-top: 0;
+  }
+  .navbar.bg-dark {
+    background-color: transparent !important;
+    background-image: url("assets/images/header_gradient.png");
+    background-repeat: repeat-x;
+  }
+  .full-banner {
+    min-height: 50vh;
+  }
+  .full-banner p {
+    color: #999898;
+    max-width: 50vw;
+  }
+  .navbar-brand.flex-grow-1 {
+    flex-grow: initial !important;
+  }
+  .navbar ul.nav {
+    flex-grow: 1 !important;
+  }
+  .navbar ul.nav .active {
+    color: #e30f19 !important;
+    font-weight: bold;
+  }
+  .navbar img {
+    height: 34px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar ul.nav li {
+    padding: 0;
+  }
+  .navbar ul.nav {
+    color: rgba(255, 255, 255, 0.5) !important;
+  }
+  .navbar ul.nav .active {
+    color: rgba(255, 255, 255, 1) !important;
+    font-weight: bold;
+  }
+}
