--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,269 +2,9 @@
 <div class="content-fluid">
   <app-full-banner></app-full-banner>
 
-  <div class="p-3 list-titles">
-    <h2 class="h4">Adicionados recentemente</h2>
-
-    <div class="d-flex flex-nowrap overflow-hidden">
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="p-3 list-titles">
-    <h2 class="h4">Em alta</h2>
-
-    <div class="d-flex flex-nowrap overflow-hidden">
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="p-3 list-titles">
-    <h2 class="h4">
-      Continuar assistindo como
-      <span class="tex-uppercase">Djalma Sindeaux</span>
-    </h2>
-
-    <div class="d-flex flex-nowrap overflow-hidden">
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="title-item">
-        <video
-          src="assets/videos/trailer_guardioes_da_galaxia_1080p.mp4"
-          controls
-          muted="muted"
-        ></video>
-        <img src="assets/images/guardios-da-galaxia.jpg" alt="Título" />
-        <div class="items">
-          <div class="left-side">
-            <button type="button" class="btn-play">
-              <i class="material-icons">play_arrow</i>
-            </button>
-            <h2>Guardiões da Galaxia</h2>
-            <ul class="infos">
-              <li class="relevance">98% relevante</li>
-              <li class="age age-12"></li>
-              <li class="parts">2 partes</li>
-            </ul>
-            <ul class="categories">
-              <li>Épico</li>
-              <li>Filme de fantasia</li>
-              <li>Viagem no espaço</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-list-titles></app-list-titles>
+  <app-list-titles></app-list-titles>
+  <app-list-titles></app-list-titles>
 </div>
 
 <footer class="row no-gutters p-4">
