--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <app-nav-bar></app-nav-bar>
+
 <div class="content-fluid">
   <app-full-banner></app-full-banner>
 
-  <app-list-titles></app-list-titles>
-  <app-list-titles></app-list-titles>
-  <app-list-titles></app-list-titles>
+  <app-list-titles title="Adicionando recentemente"></app-list-titles>
+  <app-list-titles title="Em alta"></app-list-titles>
+  <app-list-titles
+    title="Continuar assitindo como DJALMA SINDEAUX"
+  ></app-list-titles>
 </div>
 
 <app-footer></app-footer>
