--- a/src/app/shared/list-titles/list-titles.component.html
+++ b/src/app/shared/list-titles/list-titles.component.html
@@ -1,5 +1,5 @@
 <div class="p-3 list-titles">
-  <h2 class="h4">Adicionados recentemente</h2>
+  <h2 class="h4">{{ title }}</h2>
 
   <div class="d-flex flex-nowrap overflow-hidden">
     <app-title></app-title>
