--- a/src/app/shared/list-titles/list-titles.component.html
+++ b/src/app/shared/list-titles/list-titles.component.html
@@ -2,8 +2,6 @@
   <h2 class="h4">{{ title }}</h2>
 
   <div class="d-flex flex-nowrap overflow-hidden">
-    <app-title></app-title>
-    <app-title></app-title>
-    <app-title></app-title>
+    <app-title *ngFor="let title of list" [title]="title"></app-title>
   </div>
 </div>
