--- a/src/app/shared/nav-bar/nav-bar.compont.html
+++ b/src/app/shared/nav-bar/nav-bar.compont.html
@@ -1,5 +1,8 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
-  <button class="navbar-toggler d-lg-none" type="button">
+<nav
+  class="navbar navbar-dark bg-dark fixed-top"
+  [ngClass]="{'sidebar-open': opened}"
+>
+  <button class="navbar-toggler d-lg-none" type="button" (click)="toogle()">
     <img src="assets/images/hamburger.gif" alt="Menu" />
   </button>
 
