--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar
+  [opened]="menuOpened"
+  (menuToggle)="setMenuStage($event)"
+></app-nav-bar>
 
 <div class="content-fluid">
   <app-full-banner></app-full-banner>
@@ -15,3 +18,5 @@
 </div>
 
 <app-footer></app-footer>
+
+<div class="backdrop" (click)="closeMenu()" *ngIf="menuOpened"></div>
