--- a/src/app/shared/nav-bar/nav-bar.compont.html
+++ b/src/app/shared/nav-bar/nav-bar.compont.html
@@ -2,7 +2,7 @@
   class="navbar navbar-dark bg-dark fixed-top"
   [ngClass]="{'sidebar-open': opened}"
 >
-  <button class="navbar-toggler d-lg-none" type="button" (click)="toogle()">
+  <button class="navbar-toggler d-lg-none" type="button" (click)="toggle()">
     <img src="assets/images/hamburger.gif" alt="Menu" />
   </button>
 
