--- a/src/app/shared/title/title.component.html
+++ b/src/app/shared/title/title.component.html
@@ -1,10 +1,14 @@
-<div class="title-item">
-  <video [src]="title.trailer" controls muted="muted"></video>
+<div class="title-item" (mouseenter)="playVideo()" (mouseleave)="stopVideo()">
+  <video #trailer [src]="title.trailer" controls muted="muted"></video>
   <img [src]="title.coverUrl" [alt]="title.coverAlt" />
   <div class="items">
     <div class="left-side">
-      <button type="button" class="btn-play">
+      <button type="button" class="btn btn-play">
         <i class="material-icons">play_arrow</i>
+      </button>
+      <button type="button" class="btn btn-muted" (click)="muteToggle()">
+        <i class="material-icons" *ngIf="areMuted()">volume_off</i>
+        <i class="material-icons" *ngIf="!areMuted()">volume_up</i>
       </button>
       <h2>{{ title.name }}</h2>
       <ul class="infos">
