--- a/src/app/shared/title/title.component.scss
+++ b/src/app/shared/title/title.component.scss
@@ -49,7 +49,7 @@
   font-size: 20px;
   margin: 5px auto;
 }
-.title-item .btn-play {
+.title-item .btn {
   background: none;
   border: #fff 2px solid;
   border-radius: 16px;
@@ -58,6 +58,15 @@
   align-items: center;
   width: 32px;
   height: 32px;
+}
+.title-item .btn i {
+  line-height: 16px;
+  color: #fff;
+}
+.title-item .btn-muted {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 .title-item .btn-play i {
   color: red;
