--- a/src/app/shared/full-banner/full-banner.component.scss
+++ b/src/app/shared/full-banner/full-banner.component.scss
@@ -4,33 +4,28 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right;
-}
-.full-banner small {
-  color: #999898;
-}
-.full-banner .btn-primary {
-  background-color: #e30f19;
-  border-radius: 0;
-  border: none;
-  min-width: 100px;
-}
-@media (min-width: 576px) {
-  .full-banner {
+  small {
+    color: #999898;
+  }
+  .btn-primary {
+    background-color: #e30f19;
+    border-radius: 0;
+    border: none;
+    min-width: 100px;
+  }
+  @media (min-width: 576px) {
     min-height: 256px;
   }
-}
-@media (min-width: 768px) {
-  .full-banner .d-flex {
-    align-items: center;
+  @media (min-width: 768px) {
+    .d-flex {
+      align-items: center;
+    }
   }
-}
-
-@media (min-width: 992px) {
-  .full-banner {
+  @media (min-width: 992px) {
     min-height: 50vh;
-  }
-  .full-banner p {
-    color: #999898;
-    max-width: 50vw;
+    p {
+      color: #999898;
+      max-width: 50vw;
+    }
   }
 }
