--- a/src/app/shared/nav-bar/nav-bar.compont.scss
+++ b/src/app/shared/nav-bar/nav-bar.compont.scss
@@ -1,87 +1,97 @@
 .navbar {
   z-index: 1000;
-}
-.navbar.bg-dark {
-  background-color: rgba(0, 0, 0, 0.6) !important;
-}
-.navbar .form-control {
-  background-color: #1b1b1b !important;
-  color: #fff;
-  border-color: #fff;
-  border-radius: 0;
-  max-width: 115px;
-  line-height: 28px;
-  height: 28px;
-}
-.navbar img {
-  height: 24px;
-}
-.navbar ul.sidebar {
-  color: #999898;
-  max-width: 250px;
-  background-color: #1b1b1b !important;
-  position: absolute;
-  top: 60px;
-  left: -250px;
-  height: calc(100vh - 60px);
-  overflow-y: auto;
-  transition: all 0.1s ease-out;
-  opacity: 0.5;
-}
-.navbar.sidebar-open ul {
-  left: 0;
-  opacity: 1;
-}
-.navbar ul li {
-  padding: 0.3em 1em;
-}
-.navbar ul li.divider {
-  border-bottom: #999898 1px solid;
-  margin: 0.3em auto;
-}
-.navbar-dark .navbar-toggler {
-  color: #fff;
-  border: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-.media-avatar img {
-  height: 38px;
-}
-@media (min-width: 576px) {
-  .navbar .form-control {
-    max-width: 180px;
+  &.bg-dark {
+    background-color: rgba(0, 0, 0, 0.6) !important;
+    @media (min-width: 992px) {
+      background-color: transparent !important;
+      background-image: url("/assets/images/header_gradient.png");
+      background-repeat: repeat-x;
+    }
+  }
+  .form-control {
+    background-color: #1b1b1b !important;
+    color: #fff;
+    border-color: #fff;
+    border-radius: 0;
+    max-width: 115px;
+    line-height: 28px;
+    height: 28px;
+    @media (min-width: 576px) {
+      max-width: 180px;
+    }
+  }
+  img {
+    height: 24px;
+  }
+  ul {
+    &.sidebar {
+      color: #999898;
+      max-width: 250px;
+      background-color: #1b1b1b !important;
+      position: absolute;
+      top: 60px;
+      left: -250px;
+      height: calc(100vh - 60px);
+      overflow-y: auto;
+      transition: all 0.1s ease-out;
+      opacity: 0.5;
+    }
+    li {
+      padding: 0.3em 1em;
+      &.divider {
+        border-bottom: #999898 1px solid;
+        margin: 0.3em auto;
+      }
+    }
+    @media (min-width: 992px) {
+      &.nav {
+        flex-grow: 1 !important;
+        .active {
+          color: #e30f19 !important;
+          font-weight: bold;
+        }
+      }
+    }
+    @media (min-width: 1200px) {
+      &.nav {
+        color: rgba(255, 255, 255, 0.5) !important;
+        .li {
+          padding: 0;
+        }
+        .active {
+          color: rgba(255, 255, 255, 1) !important;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  &.sidebar-open {
+    ul {
+      left: 0;
+      opacity: 1;
+    }
+  }
+  .navbar-dark {
+    .navbar-toggler {
+      color: #fff;
+      border: none;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  @media (min-width: 992px) {
+    .navbar-brand {
+      &.flex-grow-1 {
+        flex-grow: initial !important;
+      }
+    }
+    img {
+      height: 34px;
+    }
   }
 }
-@media (min-width: 992px) {
-  .navbar.bg-dark {
-    background-color: transparent !important;
-    background-image: url("/assets/images/header_gradient.png");
-    background-repeat: repeat-x;
-  }
-  .navbar-brand.flex-grow-1 {
-    flex-grow: initial !important;
-  }
-  .navbar ul.nav {
-    flex-grow: 1 !important;
-  }
-  .navbar ul.nav .active {
-    color: #e30f19 !important;
-    font-weight: bold;
-  }
-  .navbar img {
-    height: 34px;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar ul.nav li {
-    padding: 0;
-  }
-  .navbar ul.nav {
-    color: rgba(255, 255, 255, 0.5) !important;
-  }
-  .navbar ul.nav .active {
-    color: rgba(255, 255, 255, 1) !important;
-    font-weight: bold;
+.media-avatar {
+  img {
+    height: 38px;
   }
 }
